# nflbigdatabowl2023

./: .bash_helpers  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
.github/workflows/: pre-commit.yml  test.yml
notebooks/alek/: README.md  rushers_pocket_area.ipynb  voronoi_pocket_area.ipynb  voronoi_rushers_only.ipynb
notebooks/tabor/: Adaptive Corvex Hull.ipynb  Heatmap Development.ipynb  Pocket Area Metrics.ipynb  Pocket_Area_Metric_Application.ipynb  README.md
notebooks/vinesh/: README.md  area_aggregation.ipynb  clean_event.ipynb  example.ipynb  generate_figures.ipynb  heatmap_example.ipynb  heatmaps_official.ipynb  pipeline_example.ipynb  play_metrics_example.ipynb  reorient_tracking_data.ipynb  run_pipeline.ipynb  spotlight_search.ipynb  visualization_example.ipynb
src/metrics/pocket_area/: adaptive_pocket_area.py  adaptive_pocket_area_test.py  all.py  base.py  helpers.py  helpers_test.py  passer_radius_area.py  passer_radius_area_test.py  pocket_pb_ch_area.py  pocket_pb_ch_area_test.py  rushers_pocket_area.py  rushers_pocket_area_test.py  voronoi_pocket_area.py  voronoi_pocket_area_test.py  voronoi_rushers_only.py  voronoi_rushers_only_test.py
src/nflpocketarea2023/visualization/: formations.py  helpers.py  interactive_play_selector.py  interactive_pocket_area.py  pocket_area.py  pocket_area_test.py  scatter.py
src/pipeline/flows/: run.py  (+2 more)
src/visualization/: formations.py  heatmaps.py  interactive.py  interactive_play_selector.py  interactive_pocket_area.py  logos.py  pocket_area.py  pocket_area_test.py  scatter.py
(+47 files in other folders)
