[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nflpocketarea2023"
version = "0.0.8"
authors = [
  { name="Vinesh Kannan", email="v@hawk.iit.edu" },
  { name="Tabor Alemu", email="talemu@hawk.iit.edu" },
  { name="Alek Popovic", email="apopovic@hawk.iit.edu" },
]
description = "NFL Big Data Bowl 2023: Analyzing pocket area."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "dacite~=1.7.0",
  "matplotlib~=3.5.3",
  "numpy~=1.19.1",
  "pandas~=1.3.5",
  "Pillow~=9.4.0",
  "prefect~=2.7.4",
  "requests~=2.28.1",
  "seaborn~=0.12.2",
  "scipy~=1.6.3",
  "shapely~=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/vingkan/nflbigdatabowl2023"
